--- a/pages/aboutUs/aboutUs.html
+++ b/pages/aboutUs/aboutUs.html
@@ -33,8 +33,8 @@
   
             <div class="row featurette">
               <div class="col-md-7">
-                <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-body-secondary">It’ll blow your mind.</span></h2>
-                <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+                <h2 class="featurette-heading fw-normal lh-1">Conservacion de animales y plantas. <span class="text-body-secondary"></span></h2>
+                <p class="lead">Nosotros escogimos es te proyecto ya que podemos hacer que mas personas se preucupen por las plantas y animales.</p>
               </div>
               <div class="col-md-5">
                 <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
@@ -45,8 +45,8 @@
         
             <div class="row featurette">
               <div class="col-md-7 order-md-2">
-                <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
-                <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+                <h2 class="featurette-heading fw-normal lh-1">Porque es importatnte. <span class="text-body-secondary"></span></h2>
+                <p class="lead">Para nosotros es importante por que asi podemos hacer que mas personas se enteren de lo que pasa con las plantas y animales.</p>
               </div>
               <div class="col-md-5 order-md-1">
                 <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
@@ -57,8 +57,8 @@
         
             <div class="row featurette">
               <div class="col-md-7">
-                <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-body-secondary">Checkmate.</span></h2>
-                <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+                <h2 class="featurette-heading fw-normal lh-1">¿Como podemos ayudar?</span></h2>
+                <p class="lead">Queremos que la gente no tale muchos arboles,tambien que siembren  tus propios arboles,ahorra agua,separando la barura para que no llegue a los mares,reutilizando todo lo que puedas,tratando mejor tanto como a las plantas como alos animales.</p>
               </div>
               <div class="col-md-5">
                 <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
@@ -75,34 +75,31 @@
           <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
           <h2 class="fw-normal">Hilary Casillas</h2>
           <p>hola yo soy hilary,tengo 14 años y me gustan las gomitas..</p>
-          <p><a class="btn btn-secondary" href="#">View details »</a></p>
+          <p><a class="btn btn-secondary" href="#"></a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
           <h2 class="fw-normal">Jair Torres</h2>
           <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-          <p><a class="btn btn-secondary" href="#">View details »</a></p>
+          <p><a class="btn btn-secondary" href="#"></a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
           <h2 class="fw-normal">Daniela Villaseñor</h2>
           <p>soy una de las participantes y diseñadora de tu pagina web,</p>
-          <p><a class="btn btn-secondary" href="#">View details »</a></p>
+          <p><a class="btn btn-secondary" href="#"></a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
   
-    </div><!-- /.container -->
+    </div><!-- /.container --> 
   
   
     <!-- FOOTER -->
     <footer class="container">
       <p class="float-end"><a href="#">Back to top</a></p>
-      <p>© 2017–2024 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+      <p> <a href="#"></a> <a href="#"></a></p>
     </footer>
   </main>
   </div>
-   <h>daniela</p> 
-    <h>hilary
-  <h>jair</h>
 </body>
 </html>
