hicimos una nueva pagina
la hicimos para que quien utilice la aplicacion nos pueda donar para el cuidado

--- a/pages/aboutUs/aboutUs.html
+++ b/pages/aboutUs/aboutUs.html
@@ -12,7 +12,7 @@
     <header class="d-flex justify-content-center py-3">
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="#" class="nav-link active" aria-current="page"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Hogar</font></font></a></li>
-        <li class="nav-item"><a href="#" class="nav-link"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Características</font></font></a></li>
+        <li class="nav-item"><a href="/pages/donations/donations.html" class="nav-link"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Donaciones</font></font></a></li>
         <li class="nav-item"><a href="#" class="nav-link"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Precios</font></font></a></li>
         <li class="nav-item"><a href="#" class="nav-link"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Preguntas frecuentes</font></font></a></li>
         <li class="nav-item"><a href="#" class="nav-link"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Acerca de</font></font></a></li>
@@ -74,19 +74,19 @@
         <div class="col-lg-4">
           <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
           <h2 class="fw-normal">Hilary Casillas</h2>
-          <p>hola yo soy hilary,tengo 14 años y me gustan las gomitas..</p>
+          <p>Hola me llamo Hilary tengo 14 años, me gustan mucgo los animales y jugar futbol..</p>
           <p><a class="btn btn-secondary" href="#"></a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
           <h2 class="fw-normal">Jair Torres</h2>
-          <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
+          <p>hola me gustan las hamburguesas y los gatos,soy participante de tu aplicacion favorita.</p>
           <p><a class="btn btn-secondary" href="#"></a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
           <h2 class="fw-normal">Daniela Villaseñor</h2>
-          <p>soy una de las participantes y diseñadora de tu pagina web,</p>
+          <p>Hola,me gutan loscaballos y los tacos,soy una de las participantes y diseñadora de tu pagina web,</p>
           <p><a class="btn btn-secondary" href="#"></a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
