--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -20,15 +20,15 @@
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">  
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-            <h2 class="fw-normal">Heading</h2>
-            <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
+            <h2 class="fw-normal">Juego</h2>
+            <p>Aqui puedes encontrar un juego para entretenerte un momento.</A></p>
             <p><a class="btn btn-secondary" href="../game/game.html">View details »</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-            <h2 class="fw-normal">Heading</h2>
+            <h2 class="fw-normal">Animales</h2>
             <p>And lastly this, the third column of representative placeholder content.</p>
-            <p><a class="btn btn-secondary" href="#">View details »</a></p>
+            <p><a class="btn btn-secondary" href="../plantsAndAnimals/animals.html">View details »</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
     
