--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -43,7 +43,7 @@
             <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
           </div>
           <div class="col-md-5">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+            <img src="https://www.google.com/gasearch?q=manos%20sosteniendo%20una%20planta%20imagenes&udm=2&source=sh/x/gs/m2/5#vhid=yG-F2dEoIB29gM&vssid=mosaic" alt="Imagen de una planta">  
           </div>
         </div>
     
