we add anothere img

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -25,7 +25,9 @@
             <p><a class="btn btn-secondary" href="../game/game.html">View details »</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
+              <img src="https://www.google.com/gasearch?q=manos%20sosteniendo%20una%20planta%20imagenes&udm=2&source=sh/x/gs/m2/5#vhid=yG-F2dEoIB29gM&vssid=mosaic" alt="">
+            </svg>
             <h2 class="fw-normal">Animales</h2>
             <p>And lastly this, the third column of representative placeholder content.</p>
             <p><a class="btn btn-secondary" href="../plantsAndAnimals/animals.html">View details »</a></p>
