--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -26,7 +26,7 @@
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-              <img src="https://www.google.com/gasearch?q=manos%20sosteniendo%20una%20planta%20imagenes&udm=2&source=sh/x/gs/m2/5#vhid=yG-F2dEoIB29gM&vssid=mosaic" alt="">
+              <img src="../../imgs/IMG_6438.jpeg" alt="">
             </svg>
             <h2 class="fw-normal">Animales</h2>
             <p>And lastly this, the third column of representative placeholder content.</p>
@@ -45,7 +45,7 @@
             <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
           </div>
           <div class="col-md-5">
-            <img src="https://www.google.com/gasearch?q=manos%20sosteniendo%20una%20planta%20imagenes&udm=2&source=sh/x/gs/m2/5#vhid=yG-F2dEoIB29gM&vssid=mosaic" alt="Imagen de una planta">  
+            <img src="../../imgs/IMG_6438.jpeg" alt="Imagen de una planta">  
           </div>
         </div>
     
