--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -25,9 +25,7 @@
             <p><a class="btn btn-secondary" href="../game/game.html">View details »</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-              <img src="../../imgs/IMG_6438.jpeg" alt="">
-            </svg>
+              <img class="roundedImg" src="../../imgs/IMG_6438.jpeg" alt="" >
             <h2 class="fw-normal">Animales</h2>
             <p>And lastly this, the third column of representative placeholder content.</p>
             <p><a class="btn btn-secondary" href="../plantsAndAnimals/animals.html">View details »</a></p>
