css link to file

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="home.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -25,7 +26,7 @@
             <p><a class="btn btn-secondary" href="../game/game.html">View details »</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-              <img class="roundedImg" src="../../imgs/IMG_6438.jpeg" alt="" >
+              <img class="rounded-img" src="../../imgs/IMG_6438.jpeg" alt="" >
             <h2 class="fw-normal">Animales</h2>
             <p>And lastly this, the third column of representative placeholder content.</p>
             <p><a class="btn btn-secondary" href="../plantsAndAnimals/animals.html">View details »</a></p>
