Imagen de animales

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -44,7 +44,7 @@
             <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
           </div>
           <div class="col-md-5">
-            <img src="../../imgs/IMG_6438.jpeg" alt="Imagen de una planta">  
+            <img src="../../imgs/" alt="Imagen de una planta">  
           </div>
         </div>
     
